--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/mmendesas/alura-payfast#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "consign": "^0.1.4",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "express-validator": "^3.2.0",
+    "mysql": "^2.13.0"
   }
 }
