--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "consign": "^0.1.4",
     "express": "^4.15.3",
     "express-validator": "^3.2.0",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "restify": "^4.3.0",
+    "soap": "^0.19.0"
   }
 }
